-- Таблица пользователей
CREATE TABLE users (
    userID int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name varchar(100) NOT NULL,
    email varchar(255) UNIQUE NOT NULL,
    passwordHash varchar(255) NOT NULL,
    createdAt timestamp DEFAULT CURRENT_TIMESTAMP,
    isAdmin boolean DEFAULT false
);

-- Таблица опросов
CREATE TABLE surveys (
    surveyID int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    userID int NOT NULL REFERENCES users(userID) ON DELETE CASCADE,
    title varchar(255) NOT NULL,
    description text,
    status varchar(50) DEFAULT 'draft' CHECK (status IN ('draft', 'published', 'closed')),
    publishedAt timestamp,
    openedAt timestamp,
    closedAt timestamp
);

-- Таблица вопросов
CREATE TABLE questions (
    questionID int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    surveyID int NOT NULL REFERENCES surveys(surveyID) ON DELETE CASCADE,
    content text NOT NULL,
    type varchar(20) NOT NULL CHECK (type IN ('single', 'multiple', 'text')),
    isRequired boolean DEFAULT TRUE,
    orderPriority int NOT NULL,
    UNIQUE(surveyID, orderPriority)
);

-- Таблица вариантов ответов (для single и multiple)
CREATE TABLE options (
    optionID int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    questionID int NOT NULL REFERENCES questions(questionID) ON DELETE CASCADE,
    text text NOT NULL,
    orderPriority int NOT NULL,
    UNIQUE(questionID, orderPriority)
);

-- Таблица ответов
CREATE TABLE answers (
    answerID int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    sessionID uuid NOT NULL,
    questionID int NOT NULL REFERENCES questions(questionID) ON DELETE CASCADE,
    optionID int REFERENCES options(optionID) ON DELETE SET NULL,
    textAnswer text,
    userID int NOT NULL REFERENCES users(userID) ON DELETE CASCADE,
    createdAt timestamp DEFAULT CURRENT_TIMESTAMP
);

-- Индексы для производительности
CREATE INDEX idx_surveys_userID ON surveys(userID);
CREATE INDEX idx_questions_surveyID ON questions(surveyID);
CREATE INDEX idx_options_questionID ON options(questionID);
CREATE INDEX idx_answers_sessionID ON answers(sessionID);
CREATE INDEX idx_answers_questionID ON answers(questionID);
CREATE INDEX idx_answers_userID ON answers(userID);
